# whl-cal

./: .gitignore  README.md  camera_config.yaml  cli.py  cli_batch.py  extract_pcd.py  final_vehicle_model.pcd  fusion.py  lidar2lidar.py  pyproject.toml  record2pcd.py  requirements.txt  test_lidar2lidar.py
.github/: copilot-instructions.md
.github/skills/calibration-algorithm-design/: SKILL.md
.github/skills/calibration-algorithm-iteration/: SKILL.md
.github/skills/calibration-algorithm-validation/: SKILL.md
calibration_common/: __init__.py  evaluation.py
camera/: README.md  __init__.py  cli.py  intrinsic.py  intrinsic_capture.py  intrinsic_evaluation.py  intrinsic_sampling.py  intrinsic_solver.py  intrinsic_targets.py  intrinsic_visualization.py  intrinsic_workspace.py
camera2camera/: __init__.py  cli.py  io.py  live_capture.py  metrics.py  models.py  reference_pipeline.py
camera2lidar/: learning_based.py  reference_based.py
conf/: camera_config_chess.yaml
context/: README.md  calibration_algorithm_review_2026_05_17.md  calibration_dataset_2026_05_06.md  calibration_paradigm.md  calibration_target_requirements.md  camera_intrinsic_round01_review_2026_05_27.md  docs_links.md  index.md  lidar2camera_context.md  lidar2imu_context.md  lidar2imu_customer_runbook.md  lidar2lidar_advanced_strategy.md  lidar2lidar_scan2scan_playbook.md  prepared_rig_dataset_context.md  scan2map_context.md  scan2map_metrics_framework.md  timing_sync_context.md  timing_topic_table.md  todos.md
context/knowledge_base/: calibration_overview.md  engineering_index.md  validated_conclusions.md  verification_points.md
context/principles/: iteration_rules.md
docs/: apollo_data_collection.md  calibration_methodology.md  calibration_review_guide.md  camera2camera_design.md  camera2camera_quickstart.md  camera2camera_recording_protocol.md  camera2lidar_quickstart.md  camera_quickstart.md  docs_vs_context.md  lidar2camera_customer_guide.md  lidar2camera_design.md  lidar2camera_nuscenes_benchmark.md  lidar2camera_quickstart.md  lidar2camera_test_quickstart.md  lidar2imu.md  lidar2imu_design.md  lidar2imu_quickstart.md  lidar2imu_user_guide.md  lidar2lidar.md  lidar2lidar_design.md  lidar2lidar_quickstart.md  quickstart_index.md  submodule_summaries.md
lidar2camera/: README.md  __init__.py  cli.py  config.yaml  input_source.py  io.py  learning_based.py  metrics.py  models.py  nuscenes_benchmark.py  record_export.py  reference_based.py  reference_pipeline.py
lidar2camera/extract/: calibrate_auto.py  calibrate_p2plane.py  detect_camera.py  extract_pcd_from_bag.py  overlay_undistort.py  pair_livox.py  runpaths.py
lidar2imu/: README.md  __init__.py  algorithms.py  calibrator.py  cli.py  data_loader.py  io.py  local_mapping.py  metrics.py  models.py  motion_estimator.py  motion_information.py  pipeline.py  record_converter.py  validator.py  visualization.py  visualizer.py
lidar2imu/evaluation/: __init__.py  assessment.py  builder.py  cloud_thickness.py  consistency.py  diagnostics.py  holdout.py
lidar2imu/extraction/: __init__.py  ground.py  motion_candidates.py  motion_windows.py  observability_screening.py  timing.py
lidar2imu/mapping/: __init__.py  overlap.py  submaps.py
lidar2imu/review/: __init__.py  charts.py  front_end.py  io_utils.py  registration_objects.py  report.py  trajectory.py
lidar2imu/solvers/: __init__.py  dataset_split.py  ground.py  joint.py  motion_information_weighting.py  motion_objective.py  motion_screening.py  motion_subset_search.py  motion_sufficiency.py  nhc_prior.py  orchestrator.py  planar.py  robustness.py  temporal_alignment.py
lidar2lidar/: README.md  __init__.py  apollo_flatbuffer_messages.py  apollo_record_messages.py  auto_calib.py  cli.py  extrinsic_io.py  lidar2lidar.py  loop_closure.py  merge_pcd.py  model.py  prepared_dataset.py  pycyber_record_adapter.py  record.py  record_adapter.py  record_utils.py  scan2map_calib.py  scan2map_dataset.py  temporal_calib.py  tf_init.json  tf_init.yaml  workflow.py
lidar2lidar/conf/: README.md  imu_lidar_front_extrinsics.yaml  imu_lslidar_main_extrinsics.yaml  lslidar_main_lslidar_left_extrinsics.yaml  lslidar_main_lslidar_right_extrinsics.yaml  workflow_raw4_loop_example.yaml  workflow_raw4_perimeter_loop.yaml  workflow_tf_tree_example.yaml
lidar2lidartool/: cli.py
tools/: README.md  __init__.py  run_camera2camera_smoke.py  run_lidar2camera_smoke.py
tools/camera/: analyze_intrinsic.py
tools/camera2camera/: analyze.py  extract_pairs.py
tools/lidar2camera/: __init__.py  run_nuscenes_benchmark.py  run_nuscenes_precision_audit.py  run_nuscenes_split_benchmark.py
tools/lidar2imu/: __init__.py  review_runs.py  tune_record.py
tools/lidar2lidar/: __init__.py  extract_pcd.py  inspect_pointcloud.py  list_topics.py  merge_pcd.py  prepare_rig_dataset.py
(+11 files in other folders)
