[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-cal"
version = "0.1.0"
description = "LiDAR extrinsic calibration tool"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "spidermaniron", email = "1195487354@qq.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "click",
  "flatbuffers",
  "numpy",
  "opencv-python",
  "open3d",
  "protobuf==3.19.4",
  "cyber_record",
  "pupil-apriltags",
  "scipy",
  "pyyaml"
]

[project.urls]
Homepage = "https://github.com/wheelos-tools/whl-cal"
BugTracker = "https://github.com/wheelos-tools/whl-cal/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
lidar2lidar = ["conf/*.yaml", "conf/*.md"]

[project.scripts]
camera-intrinsic-calibrate = "camera.cli:main"
lidar2lidar-calibrate = "lidar2lidar.cli:main"
lidar2lidartool = "lidar2lidar.cli:main"
lidar2lidar-auto = "lidar2lidar.auto_calib:main"
lidar2lidar-scan2map = "lidar2lidar.scan2map_calib:main"
lidar2lidar-scan2map-dataset = "lidar2lidar.scan2map_dataset:main"
lidar2lidar-temporal = "lidar2lidar.temporal_calib:main"
lidar2lidar-rig-dataset = "tools.lidar2lidar.prepare_rig_dataset:main"
lidar2imu-calibrate = "lidar2imu.cli:main"
lidar2imu-convert-record = "lidar2imu.record_converter:main"
lidar2imu-tune-record = "tools.lidar2imu.tune_record:main"
lidar2imu-review-runs = "tools.lidar2imu.review_runs:main"
lidar2camera-calibrate = "lidar2camera.cli:main"
camera2camera-calibrate = "camera2camera.cli:main"
lidar2camera-extract-record = "lidar2camera.record_export:main"
lidar2camera-nuscenes-benchmark = "tools.lidar2camera.run_nuscenes_benchmark:main"
lidar2camera-nuscenes-precision-audit = "tools.lidar2camera.run_nuscenes_precision_audit:main"
lidar2lidar-extract = "tools.lidar2lidar.extract_pcd:main"
lidar2lidar-inspect-pointcloud = "tools.lidar2lidar.inspect_pointcloud:main"
lidar2lidar-topics = "tools.lidar2lidar.list_topics:main"
lidar2lidar-merge = "tools.lidar2lidar.merge_pcd:main"
